--- a/helm/travelmap/values.yaml
+++ b/helm/travelmap/values.yaml
@@ -15,10 +15,10 @@ backend:
   resources:
     requests:
       cpu: "250m"
-      memory: "512Mi"
+      memory: "256Mi"
     limits:
       cpu: "500m"
-      memory: "1Gi"
+      memory: "512Mi"
 
 frontend:
   image:
@@ -38,7 +38,7 @@ frontend:
 
 db:
   type: internal
-  host: postgres
+  host: postgres.default.svc.cluster.local
   port: 5432
   username: travelmap
   password:
