env 제대로 적용 안되는 부분 수정 코밋

--- a/helm/travelmap/values.yaml
+++ b/helm/travelmap/values.yaml
@@ -10,7 +10,7 @@ backend:
     port: 8080
   env:
     SPRING_PROFILES_ACTIVE: prod
-    youtubeApiSecret: travelmap-secret
+    youtubeApiSecret: travelmap
     youtubeApiKey: youtube-api-key
   resources:
     requests:
