애플리케이션 시작 후 바로 종료되는 현상 수정중

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// actuator 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
