--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -9,6 +9,9 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Web ?? ??
+spring.main.web-application-type=servlet
+
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -19,8 +22,11 @@ spring.jpa.properties.hibernate.format_sql=true
 youtube.api.key=${YOUTUBE_API_KEY}
 youtube.api.application-name=TravelMap
 
-# OCR Configuration
-ocr.tesseract.data-path=/opt/homebrew/share/tessdata
+## OCR Configuration
+#ocr.tesseract.data-path=/opt/homebrew/share/tessdata
+
+# OCR Configuration (Docker ?? ??? ??)
+ocr.tesseract.data-path=/usr/share/tessdata
 
 # Scheduling Configuration
 spring.quartz.scheduler-name=TravelMapScheduler
