--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,7 @@ FROM openjdk:21-slim-buster
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
-CMD ["java", "-jar", "-Dspring.profiles.active=prod", "app.jar"]
+ENV JAVA_OPTS=""
+
+# 메인 실행
+CMD ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
