--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,8 @@ FROM openjdk:21-slim-buster
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
-ENV JAVA_OPTS=""
+# ENV JAVA_OPTS=""
 
 # 메인 실행
-CMD ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
+# CMD ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
+CMD ["sh"]
