db pw 값 오류 코밋

--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.db.password.secretName }}
-                  key: db-username
+                  key: db-password
             - name: YOUTUBE_API_KEY
               valueFrom:
                 secretKeyRef:
