--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,4 @@ FROM openjdk:21-slim-buster
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
-ENV JAVA_OPTS=""
-
-CMD ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
+CMD ["java", "-jar", "/app/app.jar"]
