--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,31 @@
 # Gradle build
-FROM gradle:8.3-jdk21 AS builder
+# FROM gradle:8.14-jdk21 AS builder
+# WORKDIR /app
+# COPY build.gradle settings.gradle ./
+# COPY gradle ./gradle
+# COPY src ./src
+# RUN gradle build -x test
+#
+# FROM openjdk:21-slim-buster
+# WORKDIR /app
+# COPY --from=builder /app/build/libs/*.jar app.jar
+# EXPOSE 8080
+# CMD ["java", "-jar", "app.jar"]
+
+# FROM openjdk:21-slim-buster
+# WORKDIR /app
+# COPY --from=build /app/build/libs/*.jar app.jar
+# EXPOSE 8080
+# CMD ["java", "-jar", "app.jar"]
+
+FROM gradle:8.14-jdk21 AS build
 WORKDIR /app
-COPY build.gradle settings.gradle ./
-COPY gradle ./gradle
-COPY src ./src
-RUN gradle build -x test
+COPY --chown=gradle:gradle backend/ /app
+RUN ./gradlew clean build -x test
+
 
 FROM openjdk:21-slim-buster
 WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY build/libs/*.jar app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
