--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -14,8 +14,12 @@ spec:
       labels:
         app: {{ include "travelmap.fullname" . }}-backend
     spec:
+      # --- 여기에 imagePullSecrets 필드를 추가 ---
+      imagePullSecrets:
+        - name: dockerhub-credentials
+      # ---------------------------------------------
       containers:
-        - name: backend
+        - name: backend-container
           image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
           imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
           ports:
@@ -23,20 +27,25 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "{{ .Values.backend.env.SPRING_PROFILES_ACTIVE }}"
+
+            # DB 환경 변수 설정
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:postgresql://{{ .Values.db.host }}:{{ .Values.db.port }}/travelmap"
+              value: "jdbc:postgresql://{{ .Values.backend.env.DB_HOST }}:{{ .Values.backend.env.DB_PORT }}/travelmap"
             - name: SPRING_DATASOURCE_USERNAME
-              value: "{{ .Values.db.username }}"
+              value: "{{ .Values.backend.env.DB_USERNAME }}"
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.db.password.secretName }}
-                  key: db-password
+                  name: {{ .Values.backend.secrets.dbPassword.secretName }}
+                  key: {{ .Values.backend.secrets.dbPassword.secretKey }}
+
+            # YouTube API Key 설정
             - name: YOUTUBE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.backend.env.youtubeApiSecret }}
-                  key: {{ .Values.backend.env.youtubeApiKey }}
+                  name: {{ .Values.backend.secrets.youtubeApiKey.secretName }}
+                  key: {{ .Values.backend.secrets.youtubeApiKey.secretKey }}
+
           livenessProbe:
             httpGet:
               path: /actuator/health
@@ -76,6 +85,8 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      imagePullSecrets:
+        - name: dockerhub-credentials
       containers:
         - name: frontend
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}"
