--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -23,10 +23,10 @@ backend:
   resources:
     requests:
       cpu: "500m"
-      memory: "512Mi"
+      memory: "1Gi"
     limits:
       cpu: "1000m"
-      memory: "1024Mi"
+      memory: "2Gi"
 
 frontend:
   image:
@@ -42,7 +42,7 @@ frontend:
       memory: "512Mi"
     limits:
       cpu: "800m"
-      memory: "1024Mi"
+      memory: "1Gi"
 
 db:
   enabled: false
