--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -8,18 +8,15 @@ backend:
   service:
     type: ClusterIP # 내부용
     port: 8080
-  env:
-    SPRING_PROFILES_ACTIVE: prod
-    DB_HOST: postgres.default.svc.cluster.local
-    DB_PORT: "5432"
-    DB_USERNAME: travelmap
-  secrets: # 시크릿 정보를 한 곳에 모아 관리
+  secrets:
     dbPassword:
       secretName: travelmap-external-secret
       secretKey: db-password
     youtubeApiKey:
       secretName: travelmap-secret
       secretKey: youtube-api-key
+  env:
+    SPRING_PROFILES_ACTIVE: prod
   resources:
     requests:
       cpu: "500m"
