--- a/helm/travelmap/templates/service.yaml
+++ b/helm/travelmap/templates/service.yaml
@@ -15,7 +15,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ include "travelmap.name" . }}-backend
+    app: {{ $fullName }}-backend
 ---
 apiVersion: v1
 kind: Service
@@ -27,24 +27,26 @@ spec:
   type: {{ .Values.frontend.service.type }}
   ports:
     - port: {{ .Values.frontend.service.port }}
-      targetPort: 80
+      targetPort: {{ .Values.frontend.service.port }}
       protocol: TCP
       name: http
   selector:
-    app: {{ include "travelmap.name" . }}-frontend
+    app: {{ $fullName }}-frontend
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ $fullName }}-postgres
-  labels:
-    {{- include "travelmap.labels" . | nindent 4 }}
-spec:
-  type: ClusterIP
-  ports:
-    - port: {{ .Values.db.port }}
-      targetPort: {{ .Values.db.port }}
-      protocol: TCP
-      name: db
-  selector:
-    app: postgres
+{{- if .Values.db.enabled }}
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: {{ $fullName }}-postgres
+    labels:
+      {{- include "travelmap.labels" . | nindent 4 }}
+  spec:
+    type: ClusterIP
+    ports:
+      - port: {{ .Values.db.port }}
+        targetPort: {{ .Values.db.port }}
+        protocol: TCP
+        name: db
+    selector:
+      app: {{ $fullName }}-postgres
+{{- end }}
