--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -158,6 +158,10 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      cpu: "100m"
+      memory: "256Mi"
+    limits:
+      cpu: "500m"
+      memory: "512Mi"
   storageClassName: standard-rwo
 {{- end }}
