pvc 인식 못하는 부분 수정 코밋

--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -55,6 +55,7 @@ db:
     enabled: true
     size: 10Gi
     storageClass: standard-rwo
+    subPath: pgdata
 #  host: postgres.default.svc.cluster.local
   port: 5432
   username: travelmap
