--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -143,6 +143,7 @@ spec:
             volumeMounts:
               - name: postgres-storage
                 mountPath: /var/lib/postgresql/data
+                subPath: {{ .Values.db.persistence.subPath | default "" }}
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
