--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -33,6 +33,9 @@ frontend:
   service:
     type: LoadBalancer  # 외부용
     port: 80
+  env:
+    - name: REACT_APP_BACKEND_URL
+      value: "http://travelmap-backend:8080"
   resources:
     requests:
       cpu: "400m"
