frontend에 backend 연결 코밋

--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -34,7 +34,7 @@ frontend:
     type: LoadBalancer  # 외부용
     port: 80
   env:
-    - name: REACT_APP_BACKEND_URL
+    - name: REACT_APP_API_URL
       value: "http://travelmap-backend:8080"
   resources:
     requests:
