--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -148,13 +148,23 @@ spec:
             volumeMounts:
               - name: postgres-storage
                 mountPath: /var/lib/postgresql/data
+                {{- if .Values.local.enabled }}
+                # 로컬이면 emptyDir
+                subPath: ""
+                {{- else }}
                 subPath: {{ .Values.db.persistence.subPath | default "" }}
+                {{- end }}
       volumes:
         - name: postgres-storage
+          {{- if .Values.local.enabled }}
+          emptyDir: {}
+          {{- else }}
           persistentVolumeClaim:
             claimName: {{ include "travelmap.fullname" . }}-postgres-pvc
+          {{- end }}
 
 ---
+{{- if and .Values.db.enabled (not .Values.local.enabled) }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
