들려쓰기 문제?

--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -176,3 +176,4 @@ spec:
       storage: {{ .Values.db.persistence.size }}
   storageClassName: {{ .Values.db.persistence.storageClass }}
 {{- end }}
+{{- end }}
