--- a/helm/travelmap/values-gke.yaml
+++ b/helm/travelmap/values-gke.yaml
@@ -66,6 +66,9 @@ db:
     secretName: travelmap-external-secret
     secretKey: db-password
 
+local:
+  enabled: false
+
 imagePullSecrets:
   - name: dockerhub-credentials
 
