문구 신텍스 에러

--- a/helm/travelmap/templates/deployment.yaml
+++ b/helm/travelmap/templates/deployment.yaml
@@ -14,10 +14,8 @@ spec:
       labels:
         app: {{ include "travelmap.fullname" . }}-backend
     spec:
-      # --- 여기에 imagePullSecrets 필드를 추가 ---
       imagePullSecrets:
         - name: dockerhub-credentials
-      # ---------------------------------------------
       containers:
         - name: backend-container
           image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
@@ -27,10 +25,7 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "{{ .Values.backend.env.SPRING_PROFILES_ACTIVE }}"
-
-            # DB 환경 변수 설정
             - name: SPRING_DATASOURCE_URL
-#              value: "jdbc:postgresql://travelmap-postgres.travelmap-gke.svc.cluster.local:5432/travelmap"
               value: "jdbc:postgresql://{{ include "travelmap.fullname" . }}-postgres.{{ .Release.Namespace }}.svc.cluster.local:5432/travelmap"
             - name: SPRING_DATASOURCE_USERNAME
               value: "{{ .Values.db.username }}"
@@ -39,14 +34,11 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.backend.secrets.dbPassword.secretName }}
                   key: {{ .Values.backend.secrets.dbPassword.secretKey }}
-
-            # YouTube API Key 설정
             - name: YOUTUBE_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.backend.secrets.youtubeApiKey.secretName }}
                   key: {{ .Values.backend.secrets.youtubeApiKey.secretKey }}
-
           livenessProbe:
             httpGet:
               path: /actuator/health
@@ -65,7 +57,6 @@ spec:
             {{- toYaml .Values.backend.resources | nindent 12 }}
 
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -112,9 +103,7 @@ spec:
           resources:
             {{- toYaml .Values.frontend.resources | nindent 12 }}
 
-
 ---
-
 {{- if .Values.db.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -148,12 +137,11 @@ spec:
             volumeMounts:
               - name: postgres-storage
                 mountPath: /var/lib/postgresql/data
-                { { - if and .Values.local .Values.local.enabled } }
+                {{- if and .Values.local .Values.local.enabled }}
                 subPath: ""
-                { { - else } }
-                subPath: { { .Values.db.persistence.subPath | default "" } }
-                { { - end } }
-
+                {{- else }}
+                subPath: {{ .Values.db.persistence.subPath | default "" }}
+                {{- end }}
       volumes:
         - name: postgres-storage
           {{- if and .Values.local .Values.local.enabled }}
@@ -163,9 +151,9 @@ spec:
             claimName: {{ include "travelmap.fullname" . }}-postgres-pvc
           {{- end }}
 
----
 
-{{- if and .Values.db.enabled (or (not .Values.local) (not .Values.local.enabled)) }}
+---
+{{- if and .Values.db.enabled (not (and .Values.local .Values.local.enabled)) }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
