--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 # Application Configuration
 spring.application.name=TravelMap
-server.port=8080
+#server.port=8080
 server.address=0.0.0.0
 
 # Database Configuration1
